--- a/.env
+++ b/.env
@@ -50,3 +50,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+SMPP_SERVICE=
+SMPP_PORT=
+SMPP_RECEIVER_ID=
+SMPP_RECEIVER_PASSWORD=
+SMPP_TRANSMITTER_ID=
+SMPP_TRANSMITTER_PASSWORD=
