--- a/.env
+++ b/.env
@@ -51,9 +51,9 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-SMPP_SERVICE=
-SMPP_PORT=
-SMPP_RECEIVER_ID=
-SMPP_RECEIVER_PASSWORD=
+SMPP_SERVICE=94.130.198.32
+SMPP_PORT=65432
+SMPP_RECEIVER_ID=papax
+SMPP_RECEIVER_PASSWORD=cayou3
 SMPP_TRANSMITTER_ID=
 SMPP_TRANSMITTER_PASSWORD=
